# Img2Fourier

./: .gitignore  CMakeLists.txt  NEWS.md  README.md
include/: img2fft_gui.h  logger.h
include/savannah/: main-app.h
src/: img2fft_gui.cpp
src/savannah/: main-app.cpp
